/*
 * Copyright 2019 Streamlio, Inc
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

syntax = "proto2";

option java_package = "io.streaml.msggw.kafka.proto";

message ConsumerGroupAssignment {
  required int32 generation = 1;

  repeated MemberData memberData = 2;
  repeated Assignment assignment = 3;

  message ProtocolMetadata {
   optional string protocol = 1;
   optional bytes metadata = 2;
  };
  message MemberData {
    optional string member = 1;
    optional int32 sessionTimeout = 2;
    optional int32 rebalanceTimeout = 3;
    repeated ProtocolMetadata protocolMetadata = 4;
  };
  message Assignment {
    optional string member = 1;
    optional bytes assignment = 2;
  };
}

message OffsetAndMetadataFormat {
  optional int64 offset = 1;
  optional string metadata = 2;
}

message NodeIdList {
  repeated Assignment id = 1;

  message Assignment {
    optional int32 nodeId = 1;
    optional string node = 2;
  };
}